Fix the width of the Google maps iframe on smaller screens

--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -5,6 +5,7 @@
   margin-right: auto;
   margin-left: auto;
   margin-bottom: 30px;
+  border: 1px solid $secondary;
 
   @media (min-width: 768px) {
     width: 30%;
