--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -8,3 +8,36 @@
 .copyright {
   background-color: darken($secondary, 10%);
 }
+
+#map {
+  max-width: 25rem;
+  margin: 0 auto;
+}
+
+#map > div {
+  height: 100%;
+  position: relative; 
+  
+  position: relative;
+  margin: auto;
+  
+  width: 80%;
+  /* 40:29 Aspect Ratio */
+  padding-top: calc((29/40) * 80%);
+  
+  @media (min-width: 576px) {
+    width: 100%;
+    padding-top: calc((29/40) * 100%);
+  }
+}
+
+#map > div > iframe {
+  width: 100%;
+  height: 100%;
+  position: absolute; 
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  border: 1px solid $secondary;
+}
