--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -137,18 +137,10 @@ section {
   }
 }
 
-// Add a small border
-.black-border {
-  border: 2px solid $secondary;
-}
-
 .wrapper {
   height: 100%;
   position: relative; 
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
-  border: 2px solid $secondary;
+  border: 1px solid $secondary;
 }
 
 .wrapper img {
